Even more text on leg algo...

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -1,6 +1,7 @@
 %-----------------------------
 %-----------------------------
 \chapter{Zusätzliche Features}
+\label{chapter:additional_features}
 
 \begin{itemize}
  \item Variationen erzeugen
