--- a/latex/bone_models.tex
+++ b/latex/bone_models.tex
@@ -1,6 +1,7 @@
 %-----------------------
 %-----------------------
 \chapter{Knochenmodelle}
+\label{chapter:bone_models}
 
 %--------------------------------
 \section{Knochenmodelle einfügen}
