--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -252,6 +252,7 @@
  
  %-------------------------------------------------
  \section{Bedingte Verteilung der PCA Eingabedaten}
+ \label{pca_conditions}
  
  
  Aus den Ergebnissen der PCA lassen sich sehr gut zufällige Skelette erzeugen. Es ist aber schwer gezielt Eigenschaften festzulegen.
